objects/kugo2p__SalesOrder__c.object
<CustomObject>
    <description>Kugamon - Main object for Order details. Contains key data points such as Account Name, Order Contacts, and Payment Information.</description>
    <fields>
        <fullName>ACV__c</fullName>
        <formula>kugo2p__Opportunity__r.ACV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ARR__c</fullName>
        <formula>kugo2p__Opportunity__r.ARR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>COA_Status__c</fullName>
        <label>COA Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commission_Paid__c</fullName>
        <formula>kugo2p__Opportunity__r.Commission_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commission Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_ARR__c</fullName>
        <formula>Quote__r.Current_ARR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Custom_Salesforce_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce Org</label>
        <referenceTo>Salesforce_Org__c</referenceTo>
        <relationshipLabel>Kugamon Orders</relationshipLabel>
        <relationshipName>Kugamon_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Forecasted_Revenue_Growth__c</fullName>
        <formula>kugo2p__Opportunity__r.Forecasted_Revenue_Growth__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecasted Revenue Growth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MRR__c</fullName>
        <formula>kugo2p__Opportunity__r.MRR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Segmented_ACV__c</fullName>
        <label>Non-Segmented ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Standard_ACV__c</fullName>
        <formula>Quote__r.Non_Standard_ACV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non Standard ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PNR__c</fullName>
        <formula>kugo2p__Opportunity__r.PNR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PNR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prepaid__c</fullName>
        <formula>kugo2p__Opportunity__r.Prepaid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prepaid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QuoteId__c</fullName>
        <description>The Corresponding CPQ Quote Id this record was created from</description>
        <externalId>true</externalId>
        <inlineHelpText>The Corresponding CPQ Quote Id this record was created from</inlineHelpText>
        <label>QuoteId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Quote_ACV__c</fullName>
        <formula>Quote__r.ACV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Salesforce CPQ Quote</description>
        <inlineHelpText>Salesforce CPQ Quote</inlineHelpText>
        <label>Quote Number</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reportable_ACV__c</fullName>
        <formula>kugo2p__Opportunity__r.Reportable_ACV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reportable ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Kugamon_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Order#</label>
        <referenceTo>CHANNEL_ORDERS__Service_Order__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Services_ACV__c</fullName>
        <formula>kugo2p__Opportunity__r.Services_ACV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Services ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Services_Amount__c</fullName>
        <formula>kugo2p__Opportunity__r.Services_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Services Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Special_Notes_and_Instructions__c</fullName>
        <label>Special Notes and Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Starting_Copado_AOV_Month__c</fullName>
        <formula>kugo2p__Opportunity__r.SRB_Month__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Starting Copado AOV Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Starting_Copado_AOV__c</fullName>
        <formula>kugo2p__Opportunity__r.SRB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Starting Copado AOV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TCV__c</fullName>
        <formula>kugo2p__Opportunity__r.TCV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1st_Year_ACV__c</fullName>
        <formula>kugo2p__Opportunity__r.X1st_Year_ACV_only__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1st Year ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1st_Year_Spend__c</fullName>
        <formula>kugo2p__Opportunity__r.X1st_Year_ACV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1st Year Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1st_yr_ARR__c</fullName>
        <formula>Quote__r.X1st_YR_ARR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1st yr ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2nd_Year_ACV__c</fullName>
        <formula>kugo2p__Opportunity__r.X2nd_Year_ACV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2nd Year ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X3rd_Year_ACV__c</fullName>
        <formula>kugo2p__Opportunity__r.X3rd_Year_ACV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>3rd Year ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X4th_Year_ACV__c</fullName>
        <formula>kugo2p__Opportunity__r.X4th_Year_ACV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>4th Year ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X5th_Year_ACV__c</fullName>
        <formula>kugo2p__Opportunity__r.X5th_Year_ACV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>5th Year ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kuga_sub__ContractEndDate__c</fullName>
        <description>References the End Date field on the related Contract record.</description>
        <formula>kuga_sub__ContractNumber__r.EndDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kuga_sub__ContractNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Contract Number.

Contract Number is automatically filled/generated for New Orders on Order Approval or Release based upon Kugamon Settings (Initiate Order Subscription Management). Required for Expansion and Renewal Orders. 
Screen reader support enabled.</description>
        <label>Contract Number</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contributing Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kuga_sub__GenerateAsset__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether an Asset will be generated by this Order upon Order Approval or Order Release based on if Order Product Lines’ underlying Product’s Additional Account Info record has the Create Asset field set to a setting other than NULL/BLANK.</description>
        <inlineHelpText>Asset record creation is based on if the underlying Additional Product Info is set to Create Asset.</inlineHelpText>
        <label>Generate Asset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kuga_sub__GenerateContract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a Contract will be generated by this Order upon Order Approval or Release.

This field value is automatically set to True upon creation of an Order, if the Kugamon Settings Initiate Order Subscription field is filled.</description>
        <label>Generate Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kuga_sub__GenerateRenewalOpportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a Renewal Opportunity will be generated by this Order upon Order Approval or Order Release based on the presence of a Renewable Service.</description>
        <label>Generate Renewal Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kuga_sub__GenerateSubscription__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a Subscription will be generated by this Order upon Order Approval or Order Release based on if Order Service Lines’ underlying Product record has the Create Subscription field is Checked.</description>
        <inlineHelpText>Subscription record creation is based on if the underlying Product is set to Create Subscription.</inlineHelpText>
        <label>Generate Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kuga_sub__ParentContractEndDate__c</fullName>
        <description>References the End Date field on the related Parent Contract record.</description>
        <formula>kuga_sub__ParentContract__r.EndDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kuga_sub__ParentContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Parent Contract.

Required for Renewal Orders.</description>
        <label>Parent Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Orders (Parent Contract)</relationshipLabel>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kuga_sub__RenewableProductsCount__c</fullName>
        <description>Total count of all the related Order Product Lines on the Order where the underlying Product has the Renewable checkbox is Checked.</description>
        <label>Renewable Products Count</label>
        <summaryFilterItems>
            <field>kugo2p__SalesOrderProductLine__c.kuga_sub__Renew__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>kugo2p__SalesOrderProductLine__c.kugo2p__SalesOrder__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>kuga_sub__RenewableServicesCount__c</fullName>
        <description>Total count of all the Order Service Lines on the related Order where the underlying Product setup as a Service and Renewable checkbox is Checked.</description>
        <label>Renewable Services Count</label>
        <summaryFilterItems>
            <field>kugo2p__SalesOrderServiceLine__c.kuga_sub__Renew__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>kugo2p__SalesOrderServiceLine__c.kugo2p__SalesOrder__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>kuga_sub__RenewalEndDate__c</fullName>
        <description>Field is applicable to Renewal Orders and is used on the Automated Renewal Email Template to Show Parent Contract End Date for all locales.</description>
        <formula>IF(
  ISBLANK(kuga_sub__ParentContractEndDate__c),
  &apos;&apos;,
  TEXT(Day(kuga_sub__ParentContractEndDate__c)) + &apos; &apos; + 
  CASE(
    MONTH(kuga_sub__ParentContractEndDate__c),
    1,
    &apos;Jan&apos;,
    2,
    &apos;Feb&apos;,
    3,
    &apos;Mar&apos;,
    4,
    &apos;Apr&apos;,
    5,
    &apos;May&apos;,
    6,
    &apos;Jun&apos;,
    7,
    &apos;July&apos;,
    8,
    &apos;Aug&apos;,
    9,
    &apos;Sep&apos;,
    10,
    &apos;Oct&apos;,
    11,
    &apos;Nov&apos;,
    &apos;Dec&apos;
  ) + &apos; &apos; + TEXT(Year(kuga_sub__ParentContractEndDate__c))
)</formula>
        <inlineHelpText>This field is used on the Automated Renewal Email Template to Show Parent Contract End Date for all locales.</inlineHelpText>
        <label>Renewal End Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kuga_sub__RenewalOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Renewal Opportunity.

The Renewal Opportunity is created along with the Contract, when an Order is Approved or Released and a Renewable Service is present.</description>
        <label>Renewal Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Orders (Renewal Opportunity Name)</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kuga_sub__ServiceDateExpires__c</fullName>
        <description>The latest Service End Date (Date Service End) of all the related Order Service Lines.</description>
        <label>Service Date Expires</label>
        <summarizedField>kugo2p__SalesOrderServiceLine__c.kugo2p__DateServiceEnd__c</summarizedField>
        <summaryForeignKey>kugo2p__SalesOrderServiceLine__c.kugo2p__SalesOrder__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>kuga_sub__TrackableProductsCount__c</fullName>
        <label>Deprecated</label>
        <summaryFilterItems>
            <field>kugo2p__SalesOrderProductLine__c.kuga_sub__Track__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>kugo2p__SalesOrderProductLine__c.kugo2p__SalesOrder__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>kuga_sub__TrackableServicesCount__c</fullName>
        <description>Total count of the Order Service Lines where the underlying Product setup as a Service has the Create Subscription checkbox is Checked.</description>
        <label>Trackable Services Count</label>
        <summaryFilterItems>
            <field>kugo2p__SalesOrderServiceLine__c.kuga_sub__Track__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>kugo2p__SalesOrderServiceLine__c.kugo2p__SalesOrder__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>kugo2p__Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to the Account Name, which is required. 

To change the required Account name, please update the Additional Account Info field on this Order. If the field is not visible, please contact your Administrator. For Released or Paid Orders, please also update the Invoice and Payment records.</description>
        <inlineHelpText>Account is required. To change the Account, please update the Additional Account Info field on this Order. If the field is not visible, please contact your Administrator. For Released or Paid Orders, please also update the Invoice and Payment records</inlineHelpText>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__AccountingGroup__c</fullName>
        <label>Accounting Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Sale</fullName>
                </value>
                <value>
                    <fullName>Consumer Sale</fullName>
                </value>
                <value>
                    <fullName>Internal Sale</fullName>
                </value>
                <value>
                    <fullName>Reseller Sale</fullName>
                </value>
                <value>
                    <fullName>Partner Sale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__AddOnlinePaymentDetailsinPDF__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Add Checkout Option to Order PDF</inlineHelpText>
        <label>Add Checkout to Order PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__AdditionalAccountDetail__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup field to the Additional Account Info record of the Account referenced in the Account Name field. The Additional Account Info is  used to fill  the default Order fields, such as Contacts, Discount Percent, Price Book, and so on. 

Update this field to change the Account Name for this Order.</description>
        <label>Additional Account Info</label>
        <referenceTo>kugo2p__AdditionalAccountDetail__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__AdditionalChargeCreditAmount__c</fullName>
        <label>Additional Charge/Credit Amount</label>
        <summarizedField>kugo2p__SalesOrderAdditionalChargeCredit__c.kugo2p__AdditionalChargeCreditAmount__c</summarizedField>
        <summaryForeignKey>kugo2p__SalesOrderAdditionalChargeCredit__c.kugo2p__SalesOrder__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>kugo2p__AdditionalChargeCreditDateRequired__c</fullName>
        <label>Additional Charge/Credit Date Required</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__AdditionalChargeCreditTaxAmount__c</fullName>
        <label>Additional Charge/Credit Tax Amount</label>
        <summarizedField>kugo2p__SalesOrderAdditionalChargeCredit__c.kugo2p__TaxAmount__c</summarizedField>
        <summaryForeignKey>kugo2p__SalesOrderAdditionalChargeCredit__c.kugo2p__SalesOrder__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>kugo2p__AdditionalChargeCreditVATAmount__c</fullName>
        <label>Additional Charge/Credit VAT/GST Amount</label>
        <summarizedField>kugo2p__SalesOrderAdditionalChargeCredit__c.kugo2p__VATAmount__c</summarizedField>
        <summaryForeignKey>kugo2p__SalesOrderAdditionalChargeCredit__c.kugo2p__SalesOrder__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>kugo2p__AppliedPaymentAmount__c</fullName>
        <formula>round(kugo2p__OrderACCAppliedPaymentAmount__c  + kugo2p__OrderProductLineAppliedPaymentAmount__c + kugo2p__OrderServiceLineAppliedPaymentAmount__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applied Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__BalanceDueAmount__c</fullName>
        <formula>round(kugo2p__NetAmount__c -  kugo2p__AppliedPaymentAmount__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Due Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__BillToCity__c</fullName>
        <label>Bill To City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__BillToCountry__c</fullName>
        <label>Bill To Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__BillToName__c</fullName>
        <label>Bill To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__BillToStateProvince__c</fullName>
        <label>Bill To State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__BillToStreetLong__c</fullName>
        <description>A longer version of the original BillToStreet__c field</description>
        <label>Bill To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>kugo2p__BillToZipPostalCode__c</fullName>
        <label>Bill To Zip/Postal Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__BillingFrequency__c</fullName>
        <formula>If( ISBLANK(kugo2p__InvoiceSchedule__c), kugo2p__AdditionalAccountDetail__r.kugo2p__BillingFrequency__c, 
IF( 
TEXT(kugo2p__InvoiceSchedule__r.kugo2p__SchedulePeriod__c) == &apos;Daily&apos;, &apos;Daily&apos;, 
IF( 
TEXT(kugo2p__InvoiceSchedule__r.kugo2p__SchedulePeriod__c) == &apos;Weekly&apos;, &apos;Weekly&apos;, 
IF( 
TEXT(kugo2p__InvoiceSchedule__r.kugo2p__SchedulePeriod__c) == &apos;Monthly&apos;, &apos;Monthly&apos;, 
IF( 
TEXT(kugo2p__InvoiceSchedule__r.kugo2p__SchedulePeriod__c) == &apos;Quarterly&apos;, &apos;Quarterly&apos;,
IF( 
TEXT(kugo2p__InvoiceSchedule__r.kugo2p__SchedulePeriod__c) == &apos;Semi-Annually&apos;, &apos;Semi-Annually&apos;, 
IF( 
TEXT(kugo2p__InvoiceSchedule__r.kugo2p__SchedulePeriod__c) == &apos;Annually&apos;, &apos;Annually&apos;, 
IF(
NOT(ISBLANK(TEXT(kugo2p__InvoiceSchedule__r.kugo2p__SchedulePeriod__c))),
TEXT(kugo2p__InvoiceSchedule__r.kugo2p__SchedulePeriod__c),
&apos;One-Time&apos;
)
)
)
)
)
)
)
)</formula>
        <label>Billing Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__BillingMethod__c</fullName>
        <formula>TEXT(kugo2p__AdditionalAccountDetail__r.kugo2p__BillingMethod__c)</formula>
        <label>Billing Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier</label>
        <referenceTo>kugo2p__Carrier__c</referenceTo>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>kugo2p__Competitors__c</fullName>
        <label>Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__ContactBilling__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact Billing</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>SalesOrder</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__ContactBuying__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact Buying</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__ContactShipping__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact Shipping</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>SalesOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__CreditStatus__c</fullName>
        <formula>IF( TEXT(kugo2p__AdditionalAccountDetail__r.kugo2p__HaltReason__c) != &apos;&apos;, &apos;Manual Hold&apos;,
   IF(
      OR( TEXT(kugo2p__AdditionalAccountDetail__r.kugo2p__CreditTerms__c) == &apos;No Credit Check Required&apos;, TEXT(kugo2p__AdditionalAccountDetail__r.kugo2p__CreditTerms__c) == &apos;Credit Check Required&apos;), &apos;OK&apos;,
      IF(TEXT(kugo2p__AdditionalAccountDetail__r.kugo2p__CreditTerms__c) == &apos;On Credit Hold&apos;, &apos;Account on Credit Hold&apos;,
         IF(kugo2p__AdditionalAccountDetail__r.kugo2p__CreditAvailable__c - kugo2p__NetAmount__c &lt; 0, &apos;Account Over Credit Limit&apos;,&apos;&apos;)
      )
   )
)</formula>
        <label>Credit Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__CustomerPODate__c</fullName>
        <label>Customer PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__CustomerPONumber__c</fullName>
        <label>Customer PO Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__DateApproved__c</fullName>
        <description>Initial Order Date Approved from Draft or Sent Record Status. If Order is Released from Draft or Sent Record Status, then Date Approved equals Date Released.</description>
        <label>Date Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__DateAvailableToPromise__c</fullName>
        <formula>IF( 
ISBLANK(kugo2p__ProductDateAvailableToPromise__c) &amp;&amp; ISBLANK(kugo2p__ServiceDateAvailableToPromise__c),

kugo2p__DateRequired__c, 

IF(
    OR(
        kugo2p__ProductDateAvailableToPromise__c &gt; kugo2p__ServiceDateAvailableToPromise__c,
        TEXT(kugo2p__ServiceDateAvailableToPromise__c)=&quot;&quot;
    ),
    kugo2p__ProductDateAvailableToPromise__c, 
    kugo2p__ServiceDateAvailableToPromise__c)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Available to Promise</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__DateCancelled__c</fullName>
        <description>Date Order Cancelled</description>
        <label>Date Cancelled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__DateReleased__c</fullName>
        <description>Initial Order Date Released. Date Released will not be updated to BLANK when Order is Unreleased.</description>
        <label>Date Released</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__DateRequired__c</fullName>
        <formula>IF(
    OR(
        kugo2p__ProductDateRequired__c &lt;=  kugo2p__ServiceDateRequired__c,
        AND(TEXT(kugo2p__ServiceDateRequired__c)=&quot;&quot;, TEXT(kugo2p__ProductDateRequired__c)&lt;&gt;&quot;&quot;)
    ),
    kugo2p__ProductDateRequired__c, 
    IF(OR(
         AND(TEXT(kugo2p__ProductDateRequired__c)=&quot;&quot;, TEXT(kugo2p__ServiceDateRequired__c)&lt;&gt;&quot;&quot;),
         kugo2p__ServiceDateRequired__c &lt;= kugo2p__ProductDateRequired__c), 
         kugo2p__ServiceDateRequired__c,
         kugo2p__AdditionalChargeCreditDateRequired__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Required</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__DateSent__c</fullName>
        <description>Initial Order Date Sent via Email PDF / Email Link function</description>
        <label>Date Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__DeliveryTerms__c</fullName>
        <label>Delivery Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FOB Destination</fullName>
                </value>
                <value>
                    <fullName>FOB Origin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__DiscountPercent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>kugo2p__InvoiceSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Schedule</label>
        <referenceTo>kugo2p__InvoiceSchedule__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__IsPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only 1 Primary Order is allowed for the assigned Opportunity.</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__IsRestricted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, Manual Email and Order Release Functions are Disabled. Order Template displays Restricted message</inlineHelpText>
        <label>Restricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__NetAmount__c</fullName>
        <formula>round(kugo2p__ProductandServiceSubtotalAmount__c  + kugo2p__AdditionalChargeCreditAmount__c - kugo2p__TotalDiscountAmount__c + kugo2p__TotalTaxAmount__c +  kugo2p__TotalVATAmount__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__OnlineApprovalKey__c</fullName>
        <description>Key used to validate online approval requests.</description>
        <label>Online Order Approval Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__OnlinePaymentExpirationDate__c</fullName>
        <description>This date is calculated using the Order Valid in Days field in Kugamon Settings from the creation date of this Order.

Draft and Sent Orders:
- Applies to Both PDF and Online Order, where Blank means Online Order Page never Expires.

Approved and Released Orders:
- Does not apply. Online Order Page never Expires regardless of Date.</description>
        <inlineHelpText>Applies to Both PDF and Online Order. 

Blank = Online Order Pages Never Expire</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
</CustomObject>